edit,add,refactor : Gamecontroller
Co-authored-by: Oleksandra Omelyanyuk oleksandra.omelyanyuk@ulb.be